# SuperFTP

./: README.md  fast_push_mac.sh  fast_push_win.bat  fast_push_win.ps1  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ftp.rs  lib.rs  local.rs  main.rs  sftp.rs  transfer.rs
src/api/: ftp.ts  local.ts
src/components/: Breadcrumb.tsx  ConnectionForm.tsx  ContextMenu.tsx  FileList.tsx  FilterBar.tsx  LocalBrowser.tsx  Sidebar.tsx  TextViewer.tsx  Toast.tsx
src/stores/: connections.ts
src/utils/: filter.ts
