[package]
name = "superftp"
version = "0.1.3"
description = "SuperFTP - A modern visual FTP client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "superftp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = { version = "10", features = ["tokio"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "io-util", "net", "fs"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
# SFTP via pure-Rust SSH. Avoids the libssh2 / openssl-sys native build
# chain that's painful to bootstrap on Windows.
# Use the `ring` crypto backend rather than the default `aws-lc-rs`, which
# pulls in aws-lc-sys and requires NASM to compile on Windows.
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3"

# Pin transitive `time` to a version compatible with the `cookie 0.18` API
# (the cookie crate hasn't yet updated to `time 0.3.45+` parse signature).
time = "=0.3.44"
